--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	<body>
 		<div id="all">
 			<div id="head">
-				<h1><img src="https://theblueufocorner.github.io/images/website/banner.png"></img></h1>
+				<h1><img src="https://theblueufocorner.github.io/images/website/banner.png"></h1>
 			</div>
 			<div id="mid">
 				<div id="cont">
