--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<title>The Blue UFO Corner</title>
-		<link rel="icon" type="image/png" href="https://theblueufocorner.github.io/images/website/favicon.png" />
+		<link rel="icon" type="image/png" href="https://theblueufocorner.github.io/images/icons/favicon.png" />
 		<link rel="stylesheet" type="text/css" href="https://theblueufocorner.github.io/layout.css" />
 	</head>
 	<body>
