--- a/template.html
+++ b/template.html
@@ -12,7 +12,7 @@
 			</div>
 			<div id="mid">
 				<div id="cont">
-				<font size="6">Template</font>
+				<font size="6"><b>Template</b></font>
 					</br>This is a sample template page
 				</div>
 				<div id="nav">
