--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
 				<div id="nav">
 					<h4>Navigation</h4>
 					<ul>
-						<li><a href="https://theblueufocorner.github.io/">Home</a></li>
-						<li><a href="https://theblueufocorner.github.io/introduction/introduction.html">Introduction</a></li>
+						<li><a target="_top" href="index.html">Home</a></li>
+						<li><a target="_top" href="introduction.html">Introduction</a></li>
 					</ul>
 				</div>
 			</div>
