--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
 			<div id="mid">
 				<div id="cont">
 				Coming Soon!
+					
+				An early version of the Introduction page is available, maybe check that out for the time being?
 				</div>
 				<div id="nav">
 					<h4>Navigation</h4>
