--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 				<div id="cont">
 				Coming Soon!
 					
-				An early version of the Introduction page is available, maybe check that out for the time being?
+				An early version of the Introduction page explaining the game mechanics is available, maybe check that out for the time being?
 				</div>
 				<div id="nav">
 					<h4>Navigation</h4>
